--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
 <body>
   <h1>Welcome to HTML Games Hub</h1>
   <ul>
-    <li><a href="game1/index.html">Game 1</a></li>
-    <li><a href="game2/index.html">Game 2</a></li>
-    <li><a href="game3/index.html">Game 3</a></li>
-    <li><a href="game4/index.html">Game 4</a></li>
-    <li><a href="game5/index.html">Game 5</a></li>
-    <li><a href="game6/index.html">Game 6</a></li>
-    <li><a href="game7/index.html">Game 7</a></li>
-    <li><a href="game8/index.html">Game 8</a></li>
-    <li><a href="game9/index.html">Game 9</a></li>
-    <li><a href="game10/index.html">Game 10</a></li>
+    <li><a href="game1：Guess number/index.html">game1：Guess number</a></li>
   </ul>
 </body>
 </html>
