publish snake-game

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h1>Welcome to HTML Games Hub</h1>
   <ul>
     <li><a href="game1：Guess number/index.html">game1：Guess number</a></li>
+    <li><a href="game2：snake-game/index.html">game2：snake-game</a></li>
   </ul>
 </body>
 </html>
