--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <ul>
     <li><a href="game1：Guess number/index.html">game1：Guess number</a></li>
     <li><a href="game2：snake-game/index.html">game2：snake-game</a></li>
+    <li><a href="game3：2048（pre_release）/index.html">game3：2048</a></li>
   </ul>
 </body>
 </html>
