--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="game1：Guess number/index.html">game1：Guess number</a></li>
     <li><a href="game2：snake-game/index.html">game2：snake-game</a></li>
     <li><a href="game3：2048（pre_release）/index.html">game3：2048（pre_release）</a></li>
-    <li><a href="non_release.html">game4：plant_vs_zombie（pre_release）</a></li>
+    <li><a href="game4：plant_vs_zombie（pre_release）/index.html">game4：plant_vs_zombie（pre_release）</a></li>
   </ul>
 </body>
 </html>
