create cut fruit

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="game2：snake-game/index.html">game2：snake-game</a></li>
     <li><a href="game3：2048/index.html">game3：2048</a></li>
     <li><a href="game4：tower blocks/index.html">game4：tower blocks</a></li>
+    <li><a href="game5：cut fruit/index.html">game5：cut fruit</a></li>
   </ul>
 </body>
 </html>
