create game6： mycraft

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="game3：2048/index.html">game3：2048</a></li>
     <li><a href="game4：tower blocks/index.html">game4：tower blocks</a></li>
     <li><a href="game5：cut fruit/index.html">game5：cut fruit</a></li>
+    <li><a href="game6：mycraft/index.html">game6：mycraft</a></li>
   </ul>
 </body>
 </html>
