--- a/index.html
+++ b/index.html
@@ -3,24 +3,107 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML Games Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; text-align: center; padding: 40px; }
-    h1 { font-size: 2.5em; margin-bottom: 30px; }
-    ul { list-style: none; padding: 0; }
-    li { margin: 15px 0; }
-    a { text-decoration: none; font-size: 1.5em; color: #3498db; }
-    a:hover { color: #2c3e50; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #ece9e6, #ffffff);
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.8rem;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 2rem;
+      padding: 3rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .game-card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .game-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    }
+
+    .game-card a {
+      text-decoration: none;
+      color: #3498db;
+      font-size: 1.3rem;
+      font-weight: 600;
+      display: inline-block;
+      margin-top: 0.5rem;
+    }
+
+    .game-card a:hover {
+      color: #2c3e50;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      .container {
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome to HTML Games Hub</h1>
-  <ul>
-    <li><a href="game1：Guess number/index.html">game1：Guess number</a></li>
-    <li><a href="game2：snake-game/index.html">game2：snake-game</a></li>
-    <li><a href="game3：2048/index.html">game3：2048</a></li>
-    <li><a href="game4：tower blocks/index.html">game4：tower blocks</a></li>
-    <li><a href="game5：cut fruit/index.html">game5：cut fruit</a></li>
-    <li><a href="game6：mycraft/index.html">game6：mycraft</a></li>
-  </ul>
+
+  <header>
+    <h1>🎮 HTML Games Hub</h1>
+    <p>Choose a game to play</p>
+  </header>
+
+  <div class="container">
+    <div class="game-card">
+      <div>🧠</div>
+      <a href="game1：Guess number/index.html">Guess the Number</a>
+    </div>
+    <div class="game-card">
+      <div>🐍</div>
+      <a href="game2：snake-game/index.html">Snake Game</a>
+    </div>
+    <div class="game-card">
+      <div>🔢</div>
+      <a href="game3：2048/index.html">2048</a>
+    </div>
+    <div class="game-card">
+      <div>🏗️</div>
+      <a href="game4：tower blocks/index.html">Tower Blocks</a>
+    </div>
+    <div class="game-card">
+      <div>🍉</div>
+      <a href="game5：cut fruit/index.html">Cut Fruit</a>
+    </div>
+    <div class="game-card">
+      <div>🧱</div>
+      <a href="game6：mycraft/index.html">MyCraft</a>
+    </div>
+  </div>
+
 </body>
 </html>
