--- a/pre-release/pre-index.html
+++ b/pre-release/pre-index.html
@@ -129,10 +129,10 @@
 </head>
 <body>
 
-  <button class="theme-toggle" onclick="toggleTheme()">🌙 Dark Mode</button>
+  <button class="theme-toggle" onclick="toggleTheme()"> Dark Mode</button>
 
   <header>
-    <h1>🎮 HTML Games Hub</h1>
+    <h1> HTML Games Hub</h1>
   </header>
 
   <div class="search-bar">
@@ -160,9 +160,9 @@
       <img src="thumbs/cut.jpg" alt="Cut Fruit">
       <a href="game5：cut fruit/index.html">Cut Fruit</a>
     </div>
-    <div class="game-card" data-title="MyCraft">
-      <img src="thumbs/mycraft.jpg" alt="MyCraft">
-      <a href="game6：mycraft/index.html">MyCraft</a>
+    <div class="game-card" data-title="MineCraft">
+      <img src="thumbs/minecraft.jpg" alt="MineCraft">
+      <a href="game6：minecraft/index.html">MineCraft</a>
     </div>
   </div>
 
