--- a/game6：minecraft/index.html
+++ b/game6：minecraft/index.html
@@ -13,7 +13,7 @@
       
       <!-- 直连模式 -->
       <a 
-        href="/game6：mycraft/game.html" 
+        href="/game6：mycraft/g.html" 
         class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-xl block transition"
       >
         本地开始
