--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     <div class="game-card" data-title="MineCraft">
       <img src="thumbs/minecraft.jpg" alt="MineCraft">
-      <a href="minecraft/Eaglercraft_1.12.html">MineCraft</a>
+      <a href="minecraft/index.html">MineCraft</a>
     </div>
   </div>
 
