--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -107,7 +107,7 @@
 
     <!-- 3 Dynamic Download Components (with custom download URLs) -->
     <div class="download-card" 
-         data-file="minecraft 1.8 online" 
+         data-file="index.html" 
          data-size="N/A" 
          data-type="web"
          data-download-url="./minecraft.html">
@@ -118,7 +118,7 @@
     </div>
 
     <div class="download-card" 
-         data-file="minecraft 1.8 offline" 
+         data-file="1_8.zip" 
          data-size="12.9 MB" 
          data-type="zip"
          data-download-url="./1_8.zip">
@@ -129,7 +129,7 @@
     </div>
 
     <div class="download-card" 
-         data-file="minecraft 1.12 offline" 
+         data-file="1_12.zip" 
          data-size="15.0 MB" 
          data-type="zip"
          data-download-url="./1_12.zip">
