--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -114,7 +114,7 @@
         <h3>minecraft 1.8 online</h3>
         <p>minecraft 1.8</p>
         <div class="file-info">Format: <span class="file-type">web</span> | Size: <span class="file-size">N/A</span></div>
-        <button class="download-btn">Start online</button>
+		<button class="download-btn" href="./minecraft.html">Start online</button>
     </div>
 
     <div class="download-card" 
