--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -104,8 +104,6 @@
 </head>
 <body>
     <h1>Start mode</h1>
-
-    <!-- 3 Dynamic Download Components (with custom download URLs) -->
     <div class="download-card" 
          data-file="index.html" 
          data-size="N/A" 
@@ -114,7 +112,7 @@
         <h3>minecraft 1.8 online</h3>
         <p>minecraft 1.8</p>
         <div class="file-info">Format: <span class="file-type">web</span> | Size: <span class="file-size">N/A</span></div>
-		<button class="download-btn" href="./minecraft.html">Start online</button>
+        <button class="download-btn" onclick="window.open('./minecraft.html', '_blank')">Start online</button>
     </div>
 
     <div class="download-card" 
