--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
       document.body.classList.toggle('dark');
     }
   </script>
-
+<!-- 加入页脚 -->
+<footer>
+  <p>&copy; 2026 HTML Games Hub. v1.0</p>
+</footer>
 </body>
 </html>
