--- a/index.html
+++ b/index.html
@@ -180,9 +180,16 @@
       document.body.classList.toggle('dark');
     }
   </script>
-<!-- 加入页脚 -->
-<footer>
-  <p>&copy; 2026 HTML Games Hub. v1.0</p>
-</footer>
+  <footer>
+    <p>&copy; 2026 HTML Games Hub. v3.12</p>
+  </footer>
 </body>
-</html>
+<style>
+  footer {
+    text-align: center;
+    padding: 1.5rem 0 1rem 0;
+    color: #888;
+    font-size: 1rem;
+    background: none;
+  }
+</style>
