--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -111,7 +111,7 @@
          data-download-url="./minecraft.html">
         <h3>minecraft 1.8 online</h3>
         <p>minecraft 1.8</p>
-        <div class="file-info">Format: <span class="file-type">web</span> | Size: <span class="file-size">N/A</span></div>
+        <!--<div class="file-info">Format: <span class="file-type">web</span> | Size: <span class="file-size">N/A</span></div>-->
         <button class="download-btn" onclick="window.open('./minecraft.html', '_blank')">Start online</button>
     </div>
 
