--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
       <img src="thumbs/minecraft.jpg" alt="MineCraft">
       <a href="minecraft/index.html">MineCraft</a>
     </div>
+    <div class="game-card" data-title="Tetris">
+      <img src="thumbs/tetris.jpg" alt="Tetris">
+      <a href="tetris/index.html">Tetris</a>
+    </div>
   </div>
 
   <script>
@@ -181,7 +185,7 @@
     }
   </script>
   <footer>
-    <p>&copy; 2026 HTML Games Hub. v3.14</p>
+    <p>&copy; 2026 HTML Games Hub. v3.15</p>
   </footer>
 </body>
 <style>
