--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
       <img src="thumbs/minecraft.jpg" alt="MineCraft">
       <a href="minecraft/index.html">MineCraft</a>
     </div>
+    <div class="game-card" data-title="Google dinosaur">
+      <img src="thumbs/googledino.jpg" alt="Google dinosaur">
+      <a href="googledino/index.html">Google dinosaur</a>
+    </div>
     <div class="game-card" data-title="Tetris">
       <img src="thumbs/tetris.jpg" alt="Tetris">
       <a href="tetris/index.html">Tetris</a>
@@ -185,7 +189,7 @@
     }
   </script>
   <footer>
-    <p>&copy; 2026 HTML Games Hub. v3.17</p>
+    <p>&copy; 2026 HTML Games Hub. v3.21</p>
   </footer>
 </body>
 <style>
