--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
       <img src="thumbs/tetris.jpg" alt="Tetris">
       <a href="tetris/index.html">Tetris</a>
     </div>
+    <div class="game-card" data-title="Cube">
+      <img src="thumbs/cube.jpg" alt="Cube">
+      <a href="cube/non_release.html">Cube</a>
+      <!--<a href="cube/index.html">Cube</a>-->
+    </div>
   </div>
 
   <script>
